@@ -16,7 +16,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclBasic.c,v 1.82.2.100 2008/08/20 17:53:05 dgp Exp $
+ * RCS: @(#) $Id: tclBasic.c,v 1.82.2.101 2008/08/21 15:34:50 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -2270,7 +2270,7 @@ TclInvokeStringCommand(
 
     result = (*cmdPtr->proc)(cmdPtr->clientData, interp, objc, argv);
 
-    TclStackFree(interp, argv);
+    TclStackFree(interp, (char **)argv);
     return result;
 }
 
